--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,78 @@
+html{
+  font-size: 16px;
+}
+
 body {
-  
+  position: relative;
+}
+/*global issues*/
+.flex {
+  display: flex;
+}
+
+/*header*/
+header {
+  box-sizing: border-box;
+  width: 100%;
+  height: 4rem;
+  background-color: white;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  border: solid black;
+  position: fixed;
+}
+
+.logo {
+  justify-content: flex-start;
+  align-items: center;
+  border: solid black;
+  height: 2em;
+}
+
+.logo img {
+  height: 2rem;
+}
+
+nav {
+  border: solid black;
+}
+
+nav span {
+  margin-right: 1rem;
+}
+
+/*banner*/
+.banner {
+  padding-top: rem;
+  background-color: lightgrey;
+  width: 100%;
+  height: 500px;
+  padding: 6rem 1.5rem 2rem 1.5rem;
+}
+
+.banner img {
+  max-width: 60%;
+}
+
+.text {
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 1.5rem;
+}
+
+.text h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.text p {
+  margin-bottom: 1rem;
+}
+
+.button {
+  background-color: grey;
+  padding: 1rem 5rem;
 }
