--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,13 @@
-html{
-  font-size: 16px;
-  color: dimgray;
+* {
+  box-sizing: border-box;
 }
 
 body {
   position: relative;
-
-
+  font-size: 16px;
+  color: dimgray;
 }
-/*global issues*/
+/*universal issues*/
 .flex {
   display: flex;
 }
@@ -16,9 +15,33 @@ body {
 .mobile {
   display: none
 }
+
+.h-auto {
+  height: auto;
+}
+
+.max-width {
+  max-width: 100%;
+}
+
+.content-big {
+  max-width: 60%;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.content-small {
+  max-width: 40%;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.img-container{
+  max-width: 35%;
+  }
+
 /*header*/
 header {
-  box-sizing: border-box;
   width: 100%;
   height: 4rem;
   background-color: white;
@@ -42,10 +65,6 @@ header {
   height: 2rem;
 }
 
-nav {
-
-}
-
 nav span {
   margin-right: 1rem;
 }
@@ -64,24 +83,12 @@ nav a:hover {
 .banner{
   padding-top: rem;
   background-color: lightgrey;
-  max-width: 100%;
-  height: 500px;
-  padding: 6rem 1.5rem 2rem 1.5rem;
-  box-sizing: border-box;
-  overflow: hidden;
+  padding-top: 6rem;
+  padding-bottom: 2rem;
 }
 
-.banner img{
-  max-width: 60%;
-  height: auto;
-}
-
-.text {
-  flex-direction: column;
-  flex-wrap: wrap;
+.banner .content-small {
   justify-content: center;
-  align-items: flex-start;
-  margin-left: 1.5rem;
 }
 
 .text h1 {
@@ -107,55 +114,32 @@ nav a:hover {
 
 .button:hover {
   background-color: #ff6600;
-  transition-property: background-color;
-  transition-duration: 0.4s;
-  transition-timing-function: ease-in-out;
+  transition: background-color 0.4s ease-in-out;
   cursor: pointer;
 }
 
 /*big-img section*/
 
 .hurt {
-padding: 2rem 0 2rem 1.5rem;
-max-width: 100%;
-box-sizing: border-box;
-overflow: hidden;
+  padding-bottom: 2rem;
 }
 
 .hurt h2 {
-font-size: 2.5rem;
-font-weight: bold;
-margin-top: 2rem;
-margin-bottom: 1.5rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+  padding-left: 0px;
 }
 
-.big-img {
-  flex-direction: column;
-  flex-wrap: wrap;
-  max-width: 60%;
-  padding-right: 1.5rem;
-  padding-bottom: 2rem;
-
-}
-
-.big-img img {
-width: 100%;
-}
-.big-img span {
-display: block;
-margin-top: 1rem;
-}
-
-.three-pictures {
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 40%;
+.hurt span {
+  display: block;
+  margin-top: 1rem;
 }
 
 .text {
   align-items: flex-start;
   justify-content: center;
-  width: 65%;
+  flex-direction: column;
 }
 
 .text a {
@@ -167,22 +151,14 @@ h3 {
   font-size: 1.7rem;
 }
 
-.img-container{
-  width: 35%;
-  margin: 1rem; /*this is a little bit strange*/
-  }
-
-  .small:first-child {
-    margin-top: 0; /*why doesnt work*/
-  }
-
 .small {
   border-radius: 3px;
+  padding: 1rem;
 }
 
-.small img {
-  max-width: 100%;
-  height: auto;
+
+.small .text {
+  margin-left: 1rem;
 }
 
 .small:hover {
@@ -193,33 +169,27 @@ h3 {
 
 /*start learning section*/
 .learning-section h2 {
-    display: block;
-    width: 100%;
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: bold;
-    padding: 2rem 0;
-    background-color: lightgray;
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding: 2rem 0;
+  background-color: lightgray;
   }
+
 .start {
   flex-wrap: wrap;
   padding: 0 4.5rem;
-  box-sizing: border-box;
   justify-content: center;
   background-color: lightgray;
 }
-
 
 .item {
   max-width: 30%;
   flex-direction: column;
   margin-bottom: 2rem;
   background-color: white;
-}
-
-.item img {
-  max-width: 100%;
-  height: auto;
 }
 
 .item:nth-child(3n + 2) {
@@ -238,33 +208,35 @@ h3 {
   margin: 0 auto 1.5rem 1rem;
 }
 
+/*thesis section with video*/
+h2 {
+ display: block;
+ justify-content: center;
+ padding: 2rem;
+ font-size: 2.5rem;
+ font-weight: bold;
+}
 
-/*section with video*/
 .thesis {
   box-sizing: border-box;
-  flex-wrap: wrap;
-}
-.video {
-  max-width: 60%;
-  margin-left: 1.5rem;
-}
-video {
-  max-width: 100%;
-}
-.thesis h2 {
-  display: block;
   width: 100%;
-  text-align: center;
-  padding: 2rem;
-  font-size: 2.5rem;
-  font-weight: bold;
 }
 
-.sides {
-  max-width: 40%;
+.video {
+  padding-bottom: 2rem;
+}
+
+.video h3 {
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+/*footer*/
+footer {
+  padding: 1rem 1.5rem;
+  justify-content: space-between;
+}
+
+.terms span {
   margin-left: 1.5rem;
-}
-
-.side {
-
 }
