--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,12 +7,13 @@ body {
   font-size: 16px;
   color: dimgray;
 }
+
 /*universal issues*/
 .flex {
   display: flex;
 }
 
-.mobile {
+.mobile, .mobile-img {
   display: none
 }
 
@@ -74,8 +75,8 @@ nav a {
   color: dimgray;
 }
 
-nav a:hover {
-  color: #ff6600;
+nav a:hover ,footer a:hover {
+  color: #e0ac04;
   transition: color 0.3s ease-in;
 }
 
@@ -101,7 +102,7 @@ nav a:hover {
 }
 
 .button {
-  background-color: grey;
+  background-color: gray;
   padding: 1rem 5rem;
   color: white;
   border-radius: 3px;
@@ -113,9 +114,10 @@ nav a:hover {
 }
 
 .button:hover {
-  background-color: #ff6600;
-  transition: background-color 0.4s ease-in-out;
+  background-color: #e0ac04;
+  transition: background-color 0.4s ease-in-out, text-shadow 0.4s ease-in-out;
   cursor: pointer;
+  text-shadow: 1px 1px grey;
 }
 
 /*big-img section*/
@@ -200,6 +202,16 @@ h3 {
   margin: 1rem;
 }
 
+.item a {
+  text-decoration: none;
+  color: #696969;
+}
+
+.item a:hover {
+  color: #474747;
+  transition: color 0.5s ease-out;
+}
+
 .item h4 {
   margin: 0.5rem 1rem;
 }
@@ -239,4 +251,119 @@ footer {
 
 .terms span {
   margin-left: 1.5rem;
+}
+
+.terms a {
+  text-decoration: none;
+  color: dimgray;
+}
+
+@media only screen and (max-width: 860px){
+
+  /*banner*/
+  .banner {
+    flex-direction: column;
+    padding-top: 4rem;
+  }
+
+  .content-big {
+    max-width: 100%;
+    margin: 0px;
+  }
+
+  .banner .content-small {
+    max-width: 100%;
+  }
+
+  .text {
+    margin: 2rem 1rem ;
+    align-items: center;
+  }
+
+  .text h1 {
+    margin: 32px auto;
+  }
+
+  .text p {
+    margin-bottom: 1.5rem;
+  }
+
+
+  /*hurt*/
+  .hurt .content-big {
+    display: none;
+  }
+
+  .hurt .content-small {
+    max-width: 100%;
+  }
+
+  .small {
+  flex-direction: column;
+  margin: 0;
+  max-width: 100%;
+  }
+
+  .small:hover {
+    background-color: white;
+    cursor: pointer;
+    transition: none;
+  }
+
+  .desktop {
+  display: none;
+  }
+
+  .mobile-img  {
+  display: block;
+  width: 100%;
+  height: auto;
+  }
+
+  .img-container {
+    max-width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .three-pictures {
+    width: 100%;
+  }
+
+  .three-pictures .text {
+    padding: 1rem;
+    margin-bottom: 4rem;
+    align-items: flex-start;
+    font-size: 1.5rem;
+  }
+
+  .three-pictures h3 {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+
+  }
+
+}
+
+
+@media only screen and (max-width: 600px){
+
+  /*header*/
+  .logo {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  header {
+    height: 4rem;
+  }
+
+  .icons {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
 }
