--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,9 +2,12 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   position: relative;
-  font-size: 16px;
   font-family: "Exo";
   color: #474747;
 }
@@ -421,6 +424,9 @@ footer {
 
 @media only screen and (max-width: 600px){
 
+  html {
+    font-size: 0.75rem;
+  }
   /*header*/
   .logo {
     display: none;
