--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,6 +174,10 @@ h3 {
   margin-left: 1rem;
 }
 
+.small a {
+  color: #005454;
+}
+
 .small:hover {
   background-color: #D3D3D3;
   cursor: pointer;
@@ -270,7 +274,6 @@ footer {
 
 @media only screen and (max-width: 860px){
 
-
   .column {
     flex-direction: column;
   }
@@ -357,6 +360,11 @@ footer {
   .text a:active {
     color: #e0ac04;
   }
+
+  .small a:visited {
+    color: #e0ac04;
+  }
+
 
 /*start learning*/
 
